# cliengine

./: README.md  pyproject.toml
cliengine/: command.py  loader.py  registry.py  runner.py
example/: command_type.py  main.py
example/tools/: file_compressor.py
